# gpx-viz

./: .gitignore  pyproject.toml  readme.md
src/.streamlit/: config.toml
src/app/: streamlit_app.py
src/app/lib/: data_enrichment.py  data_processing.py  navigation.py  plot_map.py  plot_profile.py  state_manager.py  tip_box.py
src/app/pages/: display_data.py  empty.py  explore_map.py  load_data.py  slope_analysis.py
